// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExperienceItem component should render correctly 1`] = `
<div>
  <div
    class="max-w-fit"
  >
    <h6
      class="text-sm font-secondary uppercase font-bold text-xs text-center lg:text-left md:text-sm text-ring mb-1.5"
    >
      Check out
    </h6>
    <button
      class="capitalize w-full mx-1 text-sm md:text-base text-center lg:text-left border-b-1 pr-2 lg:pr-5 border-transparent hover:text-accent-foreground hover:border-accent-foreground"
    >
      Top Camping Sites
    </button>
  </div>
</div>
`;

exports[`ExperienceItem component should render with active true 1`] = `
<div>
  <div
    class="max-w-fit"
  >
    <h6
      class="text-sm font-secondary uppercase font-bold text-xs text-center lg:text-left md:text-sm text-ring mb-1.5"
    >
      Check out
    </h6>
    <button
      class="capitalize w-full mx-1 text-sm md:text-base text-center lg:text-left border-b-1 pr-2 lg:pr-5 border-transparent hover:text-accent-foreground hover:border-accent-foreground text-accent-foreground border-b-accent-foreground"
    >
      Top Camping Sites
    </button>
  </div>
</div>
`;

exports[`ExperienceItem component should render with only title 1`] = `
<div>
  <div
    class="max-w-fit"
  >
    <button
      class="capitalize w-full mx-1 text-sm md:text-base text-center lg:text-left border-b-1 pr-2 lg:pr-5 border-transparent hover:text-accent-foreground hover:border-accent-foreground"
    >
      Top Camping Sites
    </button>
  </div>
</div>
`;
